--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -6,8 +6,7 @@ author_profile: true
 ---
 
 {% if site.author.googlescholar %}
-<div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar
-    profile</a>.</div>
+<div>You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
 {% endif %}
 
 {% include base_path %}
@@ -34,5 +33,5 @@ author_profile: true
 {% endif %} -->
 
 {% for post in site.publications reversed %}
-  {% include single-publication.html post=post %}
+{% include single-publication.html post=post %}
 {% endfor %}
